--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,21 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "latest",
+    "@auth0/nextjs-auth0": "^2.3.1",
+    "framer-motion": "^7.10.2",
+    "next": "13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ui": "workspace:*"
+    "react-toastify": "^9.1.1",
+    "swr": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.13",
-    "eslint-config-custom": "workspace:*",
+    "eslint-config-custom": "*",
     "postcss": "^8.4.20",
-    "tailwind-config": "workspace:*",
+    "tailwind-config": "*",
     "tailwindcss": "^3.2.4",
-    "tsconfig": "workspace:*",
+    "tsconfig": "*",
     "typescript": "^4.9.4"
   }
 }
