--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -15,6 +15,7 @@
     "@strapi/plugin-documentation": "^4.8.2",
     "@strapi/plugin-i18n": "4.8.2",
     "@strapi/plugin-users-permissions": "4.8.2",
+    "@strapi/provider-upload-cloudinary": "^4.8.2",
     "@strapi/strapi": "4.8.2",
     "pg": "8.8.0",
     "strapi-plugin-populate-deep": "^2.0.0"
