--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.3.1",
+    "@tanstack/react-query": "^4.28.0",
+    "axios": "^1.3.4",
     "framer-motion": "^7.10.2",
     "next": "13.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.6",
     "react-toastify": "^9.1.1",
     "swr": "^2.0.0"
   },
