--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev",
+    "dev": "yarn with-env:dev turbo run dev",
     "lint": "turbo run lint",
     "clean": "turbo run clean",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "with-env:dev": "dotenv -e .env.local --",
+    "with-env:prd": "dotenv -e .env.production --",
+    "with-env:stg": "dotenv -e .env.staging --"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
     "eslint-config-custom": "*",
     "prettier": "^2.7.1",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "turbo": "^1.6.1"
+    "turbo": "^1.6.1",
+    "dotenv-cli": "^7.1.0"
   },
   "packageManager": "yarn@1.22.19"
 }
