--- a/package.json
+++ b/package.json
@@ -7,20 +7,34 @@
   "scripts": {
     "build": "turbo run build --filter=web",
     "dev": "yarn with-env:dev turbo run dev",
-    "lint": "turbo run lint",
-    "clean": "turbo run clean",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "with-env:dev": "dotenv -e .env.local --",
     "with-env:prd": "dotenv -e .env.production --",
-    "with-env:stg": "dotenv -e .env.staging --"
+    "with-env:stg": "dotenv -e .env.staging --",
+    "clean": "turbo run clean",
+    "format-fix": "prettier --config .prettierrc --write --ignore-unknown -l .",
+    "format-lint": "prettier --config .prettierrc --check --ignore-unknown .",
+    "lint": "turbo lint",
+    "lint-staged-husky": "lint-staged --no-stash",
+    "commit": "git-cz",
+    "test": "turbo test -- --coverage",
+    "tsc": "turbo tsc"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-custom": "*",
-    "prettier": "^2.7.1",
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
+    "eslint": "^8.34.0",
+    "prettier": "2.8.4",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "turbo": "^1.6.1",
-    "dotenv-cli": "^7.1.0"
+    "dotenv-cli": "^7.1.0",
+    "commitizen": "4.3.0",
+    "husky": "8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "13.2.0",
+    "pretty-quick": "3.1.3",
+    "shx": "0.3.4",
+    "ts-jest": "29.0.5",
+    "ts-node": "10.9.1"
   },
   "packageManager": "yarn@1.22.19"
 }
