--- a/turbo.json
+++ b/turbo.json
@@ -7,7 +7,8 @@
       "outputs": ["dist/**", ".next/**", "!.next/cache/**"]
     },
     "lint": {},
-    "check-types": {},
+    "tsc": {},
+    "test": {},
     "dev": {
       "cache": false,
       "persistent": true
