--- a/package.json
+++ b/package.json
@@ -17,24 +17,25 @@
     "lint-staged-husky": "lint-staged --no-stash",
     "commit": "git-cz",
     "test": "turbo test -- --coverage",
-    "tsc": "turbo tsc"
+    "tsc": "turbo tsc",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
+    "commitizen": "4.3.0",
+    "dotenv-cli": "^7.1.0",
     "eslint": "^8.34.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
     "prettier": "2.8.4",
     "prettier-plugin-tailwindcss": "^0.1.11",
-    "turbo": "^1.6.1",
-    "dotenv-cli": "^7.1.0",
-    "commitizen": "4.3.0",
-    "husky": "8.0.3",
-    "jest": "^29.5.0",
-    "lint-staged": "13.2.0",
     "pretty-quick": "3.1.3",
     "shx": "0.3.4",
     "ts-jest": "29.0.5",
-    "ts-node": "10.9.1"
+    "ts-node": "10.9.1",
+    "turbo": "^1.6.1"
   },
   "packageManager": "yarn@1.22.19"
 }
