--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "apps/*"
   ],
   "scripts": {
-    "build": "turbo run build --filter=web",
+    "build": "turbo run build",
     "dev": "yarn with-env:dev turbo run dev",
     "with-env:dev": "dotenv -e .env.local --",
     "with-env:prd": "dotenv -e .env.production --",
@@ -18,11 +18,29 @@
     "commit": "git-cz",
     "test": "turbo test -- --coverage",
     "tsc": "turbo tsc",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "remove-nm": "npm exec --workspaces -- npx rimraf node_modules dist .next && npx rimraf node_modules dist .next"
+  },
+  "dependencies": {
+    "@storybook/addon-a11y": "^6.5.15",
+    "@storybook/addon-docs": "^6.5.16",
+    "@storybook/client-api": "^6.5.16",
+    "@storybook/jest": "^0.0.10",
+    "@storybook/testing-library": "^0.0.13"
   },
   "devDependencies": {
+    "@storybook/addon-actions": "6.5.16",
+    "@storybook/addon-essentials": "6.5.16",
+    "@storybook/addon-interactions": "6.5.16",
+    "@storybook/addon-links": "6.5.16",
+    "@storybook/addon-postcss": "2.0.0",
+    "@storybook/builder-webpack5": "6.5.16",
+    "@storybook/manager-webpack5": "6.5.16",
+    "@storybook/react": "6.5.16",
+    "@storybook/theming": "6.5.16",
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
+    "@growthbook/growthbook-react": "^0.13.0",
     "commitizen": "4.3.0",
     "dotenv-cli": "^7.1.0",
     "eslint": "^8.34.0",
@@ -35,7 +53,8 @@
     "shx": "0.3.4",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "turbo": "^1.6.1"
+    "turbo": "^1.6.1",
+    "tsup": "6.6.3"
   },
   "packageManager": "yarn@1.22.19"
 }
