feat: refactor code

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,5 +1,3 @@
-VersionInfo.ts
-
 .next
 .turbo
 coverage
@@ -7,6 +5,30 @@ dist
 compiled
 build-next-static
 build-storybook-static
-.umi
-.umi-production
 /voldemort-web-static
+**/*.svg
+package.json
+/dist
+.dockerignore
+.DS_Store
+.eslintignore
+*.png
+*.toml
+docker
+.editorconfig
+Dockerfile*
+.gitignore
+.prettierignore
+LICENSE
+.eslintcache
+*.lock
+yarn-error.log
+.history
+CNAME
+/build
+/public
+*.otf
+*.jpg
+*.ttf
+.cache
+.turbo
