--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,7 +31,10 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.6",
     "react-toastify": "^9.1.1",
-    "swr": "^2.0.0"
+    "ui": "*"
+  },
+  "peerDependencies": {
+    "ui": "*"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
