--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "test": "turbo test -- --coverage",
     "tsc": "turbo tsc",
     "prepare": "husky install",
-    "remove-nm": "npm exec --workspaces -- npx rimraf node_modules dist .next && npx rimraf node_modules dist .next"
+    "destroy": "rm -rf node_modules && npm exec --workspaces -- npx rimraf node_modules dist .next .turbo .cache && npx rimraf node_modules dist .next .turbo .cache"
   },
   "dependencies": {
+    "@growthbook/growthbook-react": "^0.13.0",
     "@storybook/addon-a11y": "^6.5.15",
     "@storybook/addon-docs": "^6.5.16",
     "@storybook/client-api": "^6.5.16",
@@ -29,6 +30,8 @@
     "@storybook/testing-library": "^0.0.13"
   },
   "devDependencies": {
+    "@commitlint/cli": "17.4.4",
+    "@commitlint/config-conventional": "17.4.4",
     "@storybook/addon-actions": "6.5.16",
     "@storybook/addon-essentials": "6.5.16",
     "@storybook/addon-interactions": "6.5.16",
@@ -38,23 +41,21 @@
     "@storybook/manager-webpack5": "6.5.16",
     "@storybook/react": "6.5.16",
     "@storybook/theming": "6.5.16",
-    "@commitlint/cli": "17.4.4",
-    "@commitlint/config-conventional": "17.4.4",
-    "@growthbook/growthbook-react": "^0.13.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "commitizen": "4.3.0",
     "dotenv-cli": "^7.1.0",
     "eslint": "^8.34.0",
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.0",
-    "prettier": "2.8.4",
+    "prettier": "^2.8.7",
     "prettier-plugin-tailwindcss": "^0.1.11",
     "pretty-quick": "3.1.3",
     "shx": "0.3.4",
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
-    "turbo": "^1.6.1",
-    "tsup": "6.6.3"
+    "tsup": "6.6.3",
+    "turbo": "^1.6.1"
   },
   "packageManager": "yarn@1.22.19"
 }
