chore: update prettier config

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "with-env:prd": "dotenv -e .env.production --",
     "with-env:stg": "dotenv -e .env.staging --",
     "clean": "turbo run clean",
-    "format-fix": "prettier --config .prettierrc --write --ignore-unknown -l .",
-    "format-lint": "prettier --config .prettierrc --check --ignore-unknown .",
+    "format-fix": "prettier --config prettier.config.js --write --ignore-unknown -l .",
+    "format-lint": "prettier --config prettier.config.js --check --ignore-unknown .",
     "lint": "turbo lint",
     "lint-staged-husky": "lint-staged --no-stash",
     "commit": "git-cz",
