--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -3,10 +3,19 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"],
+      "@/*": ["./src/*"],
       "@components/*": ["./src/components/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "actions/index.d.type"],
-  "exclude": ["node_modules"]
+  "include": [".", ".eslintrc.js", ".storybook/**/*"],
+  "exclude": [
+    "node_modules",
+    ".next",
+    ".turbo",
+    "coverage",
+    "dist",
+    "compiled",
+    "build-next-static",
+    "build-storybook-static"
+  ]
 }
