--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "ts-jest": "29.0.5",
     "ts-node": "10.9.1",
     "tsup": "6.6.3",
-    "turbo": "^1.6.1"
+    "turbo": "^1.6.1",
+    "typescript": "4.9.5"
   },
   "packageManager": "yarn@1.22.19"
 }
