--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,23 +1,34 @@
 {
   "name": "ui",
   "version": "0.0.0",
-  "sideEffects": [
-    "**/*.css"
-  ],
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
-  "exports": {
-    ".": "./dist",
-    "./styles.css": "./dist/index.css"
-  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "license": "MIT",
   "scripts": {
     "build": "tsup",
     "dev": "tsup --watch",
-    "tsc": "tsc --noEmit"
+    "format-fix": "prettier --config .prettierrc --write --ignore-unknown -l .",
+    "lint": "eslint --max-warnings 0 .",
+    "lint-fix": "eslint --fix .",
+    "prettier": "prettier -c --write \"**/**.{js,jsx,tsx,ts,less,md,json}\"",
+    "test": "jest --verbose --passWithNoTests",
+    "test-coverage": "jest --coverage --verbose",
+    "test-watch": "jest --verbose --watch",
+    "tsc": "tsc -p tsconfig.json",
+    "update-dependencies": "npx npm-check-updates -u"
+  },
+  "dependencies": {
+    "icons-web": "*"
   },
   "peerDependencies": {
     "react": "^18.2.0",
-    "tsup": "6.6.3"
+    "tsup": "6.6.3",
+    "icons-web": "*"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
@@ -27,6 +38,6 @@
     "react": "^18.2.0",
     "tailwind-config": "*",
     "tsconfig": "*",
-    "typescript": "^4.9.4"
+    "config-storybook": "*"
   }
 }
