--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,16 +22,23 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.3.1",
+    "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
+    "flowbite": "^1.6.4",
+    "flowbite-react": "^0.4.2",
     "framer-motion": "^7.10.2",
+    "icons-web": "*",
+    "immutable": "^4.3.0",
     "next": "13.0.7",
+    "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.6",
+    "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
-    "ui": "*",
-    "icons-web": "*"
+    "redux-persist": "^6.0.0",
+    "ui": "*"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
