--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.3.1",
+    "@hookform/resolvers": "^3.0.0",
     "@reduxjs/toolkit": "^1.9.3",
     "@tanstack/react-query": "^4.28.0",
     "axios": "^1.3.4",
@@ -34,11 +35,13 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-markdown": "^8.0.6",
     "react-redux": "^8.0.5",
     "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
-    "ui": "*"
+    "ui": "*",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/node": "^18.11.17",
