--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,9 +5,14 @@
     "paths": {
       "@/*": ["./src/*"],
       "@components/*": ["./src/components/*"]
-    }
+    },
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ]
   },
-  "include": [".", ".eslintrc.js", ".storybook/**/*"],
+  "include": [".", ".eslintrc.js", ".storybook/**/*", ".next/types/**/*.ts"],
   "exclude": [
     "node_modules",
     ".next",
